# ayed_practica_poo

./: CMakeLists.txt  README.md  main.cpp
docs/: Celda.puml  Linea.puml  Tablero.puml
include/: Celda.hpp  Linea.hpp  Tablero.hpp
src/: Celda.cpp  Linea.cpp  Tablero.cpp
